--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
         Эти знания особенно важны для начинающих, но также будут полезным напоминанием и для более опытных верстальщиков.
         Итак, поговорим о фундаментальных основах работы с отступами в вёрстке.</p>
 
-      <div class="header-wrap">
-        <h2 class="header__content">Содержание:</h2>
-        <nav class="header__nav">
-          <ol class="header__list">
-            <li class="header__item"><a href="#cat__title">Отступ задается от предыдущего элемента к следующему</a></li>
-            <li class="header__item"><a href="#dom__title">Отступ задается последнему возможному элементу в DOM-дереве</a></li>
-            <li class="header__item"><a href="#last__title">Для последнего элемента группы отступ обнуляется</a></li>
-          </ol>
-        </nav>
+      <div class="container-gray">
+        <div class="header-wrap">
+          <h2 class="header__content">Содержание:</h2>
+          <nav class="header__nav">
+            <ol class="header__list">
+              <li class="header__item"><a href="#cat__title">Отступ задается от предыдущего элемента к следующему</a></li>
+              <li class="header__item"><a href="#dom__title">Отступ задается последнему возможному элементу в DOM-дереве</a></li>
+              <li class="header__item"><a href="#last__title">Для последнего элемента группы отступ обнуляется</a></li>
+            </ol>
+          </nav>
+        </div>
       </div>
     </section>
     </div>
@@ -139,7 +141,8 @@
 
   </main>
   <footer class="footer">
-      <div class="container">
+    <div class="container">
+      <div class="container-gray">
         <section class="results">
           <div class="result result-bg">
 
@@ -156,7 +159,7 @@
           </div>
         </section>
       </div>
-
+    </div>
   </footer>
 </body>
 </html>
