--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
   <header class="header">
-    <div class="container">
     <section class="header__top">
+      <div class="container">
+
       <h1 class="header__title">Отступы в вёрстке: margin и padding</h1>
 
       <p class="header__text">В этой статье я рассмотрю самые популярные "стандартные" решения для сохранения смысла и хорошей читаемости вашего кода.
@@ -23,7 +24,8 @@
         Эти знания особенно важны для начинающих, но также будут полезным напоминанием и для более опытных верстальщиков.
         Итак, поговорим о фундаментальных основах работы с отступами в вёрстке.</p>
 
-      <div class="container-gray">
+      <section class="header-grey">
+        <div class="container-gray">
           <h2 class="header__content">Содержание:</h2>
           <nav class="header__nav">
             <ol class="header__list">
@@ -32,9 +34,10 @@
               <li class="header__item"><a href="#last__title">Для последнего элемента группы отступ обнуляется</a></li>
             </ol>
           </nav>
+        </div>
+      </section>
       </div>
     </section>
-    </div>
   </header>
 
   <main class="main">
