--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
         Итак, поговорим о фундаментальных основах работы с отступами в вёрстке.</p>
       </div>
     </section>
-      <div class="container-gray">
-          <h2 class="header__content">Содержание:</h2>
-          <nav class="header__nav">
-            <ol class="header__list">
-              <li class="header__item"><a href="#cat__title">Отступ задается от предыдущего элемента к следующему</a></li>
-              <li class="header__item"><a href="#dom__title">Отступ задается последнему возможному элементу в DOM-дереве</a></li>
-              <li class="header__item"><a href="#last__title">Для последнего элемента группы отступ обнуляется</a></li>
-            </ol>
-          </nav>
-      </div>
+     <section class="header-grey">
+       <div class="container-gray">
+         <h2 class="header__content">Содержание:</h2>
+         <nav class="header__nav">
+           <ol class="header__list">
+             <li class="header__item"><a href="#cat__title">Отступ задается от предыдущего элемента к следующему</a></li>
+             <li class="header__item"><a href="#dom__title">Отступ задается последнему возможному элементу в DOM-дереве</a></li>
+             <li class="header__item"><a href="#last__title">Для последнего элемента группы отступ обнуляется</a></li>
+           </ol>
+         </nav>
+       </div>
+     </section>
   </header>
 
   <main class="main">
